@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Display archetype use in other_arch and treasure lists.
+Nicolas Weeger 2010-03-14
+
 Rename field 'class' to 'character_class' because that's a reserved C++
 keyword and thus conflicts for CRE building.
 Nicolas Weeger 2010-03-14
